--- a/sysctl.conf
+++ b/sysctl.conf
@@ -2,3 +2,6 @@
 # To override those settings, enter new settings here, or in an /etc/sysctl.d/<name>.conf file
 #
 # For more information, see sysctl.conf(5) and sysctl.d(5).
+# dmjp
+net.ipv4.ip_forward = 1
+
