--- a/systemd/journald.conf
+++ b/systemd/journald.conf
@@ -15,7 +15,8 @@
 #SyncIntervalSec=5m
 #RateLimitInterval=10s
 #RateLimitBurst=200
-#SystemMaxUse=
+# dmjp
+SystemMaxUse=64M
 #SystemKeepFree=
 #SystemMaxFileSize=
 #RuntimeMaxUse=
