Enabled dhcpd and hostapd.

--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -1,3 +1,4 @@
+# dmjp
 ddns-update-style none;
 authoritative;
  
@@ -318,7 +319,75 @@ host co-star {
 
 host iphone {
    fixed-address iphone;
-   hardware ethernet 4c:8d:79:8d:0e:4e;
+   hardware ethernet a0:18:28:74:b0:d2;
 }
 
+host pi {
+   fixed-address pi;
+   hardware ethernet b8:27:eb:66:80:5f;
+}
+
+host fipi {
+   fixed-address fipi;
+   hardware ethernet b8:27:eb:af:cb:c8;
+}
+
+host dual {
+   fixed-address dual;
+   hardware ethernet 00:50:fc:29:9b:8d;
+}
+
+host macbook {
+   fixed-address macbook;
+   hardware ethernet 78:31:c1:bf:3d:00;
+}
+
+
+host macbookwifi { # wifi
+   fixed-address macbook;
+   hardware ethernet b8:e8:56:3a:42:6c;
+}
+
+
+host startech { # USB 3.0 gigabit dongle
+   fixed-address macbook;
+   hardware ethernet 00:24:9b:04:38:f8;
+}
+
+host ipadsu {
+   fixed-address ipadsu;
+   hardware ethernet 8c:fa:ba:e6:e5:a8;
+}
+
+
+host vmacbook {
+   fixed-address vmacbook;
+   hardware ethernet 08:00:27:71:2e:3a;
+}
+
+
+host chromecast {
+   fixed-address chromecast;
+   hardware ethernet 6c:ad:f8:1b:c6:e6;
+}
+
+host vf21 {
+   fixed-address vf21;
+   hardware ethernet 08:00:27:40:5a:a5;
+}
+
+host macbookairwifi {
+   fixed-address macbookair;
+   hardware ethernet 48:d7:05:c1:d5:97;
+}
+
+host vcentos {
+   fixed-address vcentos;
+   hardware ethernet 08:00:27:8c:09:44;
+}
+
+host vf23 {
+   fixed-address vf23;
+   hardware ethernet 08:00:27:43:5b:23;
+}
 
