--- a/hostapd/hostapd.conf
+++ b/hostapd/hostapd.conf
@@ -43,10 +43,10 @@ ignore_broadcast_ssid=0
 interface=wifi1
 driver=rtl871xdrv
 #bridge=br0
-ssid=Verizon
+ssid=pi
 channel=9
 wpa=2
-wpa_passphrase=4032718493
+wpa_passphrase=puchyr69
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 rsn_pairwise=CCMP
