Lit up gkrellmd.

--- a/gkrellmd.conf
+++ b/gkrellmd.conf
@@ -22,13 +22,12 @@
 # List of hosts allowed to connect.  If no hosts are specified in a
 # gkrellmd.conf file or on the command line, all hosts will be allowed.
 #
-allow-host	localhost
-allow-host	127.0.0.1
-allow-host	::ffff:127.0.0.1
+# dmjp: let fiflobath handle allowed hosts
+#allow-host	localhost
+#allow-host	127.0.0.1
+#allow-host	::ffff:127.0.0.1
 #allow-host	::1
 #allow-host	192.168.0.*
-# dmjp
-allow-host	192.168.1.*
 
 # Drop privileges after startup (you must start gkrellmd as root to do it).
 # NOTE: Option ignored on Windows
