Made eth0 static & configured dhcpd accordingly.

--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -20,15 +20,14 @@ subnet 10.13.13.0 netmask 255.255.255.0 {
    next-server 10.13.13.25;
 }
 
-# 
-#subnet 10.31.31.0 netmask 255.255.255.0 {
-#   range 10.31.31.100 10.31.31.199;
-#   option broadcast-address 10.31.31.255;
-#   option routers 10.31.31.1;
-#   option domain-name-servers 10.31.31.1;
-#   filename "pxelinux.0";
-#   next-server 10.31.31.1;
-#}
+subnet 192.168.1.0 netmask 255.255.255.0 {
+   range 192.168.1.100 192.168.1.199;
+   option broadcast-address 192.168.1.255;
+   option routers 192.168.1.25;
+   option domain-name-servers 192.168.1.25;
+   filename "pxelinux.0";
+   next-server 192.168.1.25;
+}
 
 host dell266 {
    fixed-address dell266;
