--- a/named.conf
+++ b/named.conf
@@ -1,34 +1,16 @@
-//
-// named.conf
-//
-// Provided by Red Hat bind package to configure the ISC BIND named(8) DNS
-// server as a caching only nameserver (as a localhost DNS resolver only).
-//
-// See /usr/share/doc/bind*/sample/ for example named configuration files.
-//
+// written by $Id$
 
 options {
-	# dmjp listen-on port 53 { 127.0.0.1; };
-	listen-on port 53 { any; };
-	listen-on-v6 port 53 { ::1; };
-	directory 	"/var/named";
-	dump-file 	"/var/named/data/cache_dump.db";
+        listen-on port 53 { any; }; // stock fedora on uses lo
+        listen-on-v6 port 53 { ::1; };
+        directory "/var/named";
+        dump-file       "/var/named/data/cache_dump.db";
         statistics-file "/var/named/data/named_stats.txt";
         memstatistics-file "/var/named/data/named_mem_stats.txt";
-	# dmjp allow-query     { localhost; };
-	allow-query     { any; };
-	recursion yes;
-
-	# dmjp dnssec-enable yes;
-	dnssec-enable no;
-	# dmjp dnssec-validation yes;
-	dnssec-validation no;
-	dnssec-lookaside auto;
-
-	/* Path to ISC DLV key */
-	bindkeys-file "/etc/named.iscdlv.key";
-
-	managed-keys-directory "/var/named/dynamic";
+        allow-query     { localhost; any; }; // stock fedora doesn't include any
+	allow-query-cache { any; };
+        allow-recursion { localnets; }; // godaddy doens't allow recursion
+        //recursion yes;
 };
 
 logging {
@@ -39,10 +21,99 @@ logging {
 };
 
 zone "." IN {
-	type hint;
-	file "named.ca";
+        type hint;
+        file "named.ca";
 };
 
-include "/etc/named.rfc1912.zones";
-include "/etc/named.root.key";
+include "/etc/named.rfc1912.zones"; // includes localhost
+
+zone "anoxymous.com" IN {
+   type master;
+   file "anoxymous.com.zone";
+};
+
+zone "avaritia.com" IN {
+   type master;
+   file "avaritia.com.zone";
+};
+
+zone "in3s.com" IN {
+   type master;
+   file "in3s.com.zone";
+};
+
+zone "jet-set-angels.com" IN {
+   type master;
+   file "jet-set-angels.com.zone";
+};
+
+zone "lot-for-sale-altos-del-maria-panama.com" IN {
+   type master;
+   file "lot-for-sale-altos-del-maria-panama.com.zone";
+};
+
+zone "SpaceTimeSimulation.com" IN {
+   type master;
+   file "SpaceTimeSimulation.com.zone";
+};
+
+zone "12.12.10.in-addr.arpa" IN {
+   type master;
+   file "12.12.10.in-addr.arpa.zone";
+};
+
+zone "0.0.127.in-addr.arpa" IN {
+   type master;
+   file "0.0.127.in-addr.arpa.zone";
+};
+
+zone "131.211.95.in-addr.arpa" IN {
+   type master;
+   file "131.211.95.in-addr.arpa.zone";
+};
+
+zone "69.237.207.in-addr.arpa" IN {
+   type master;
+   file "69.237.207.in-addr.arpa.zone";
+};
+
+zone "34.12.10.in-addr.arpa" IN {
+   type master;
+   file "34.12.10.in-addr.arpa.zone";
+};
+
+zone "16.69.72.in-addr.arpa" IN {
+   type master;
+   file "16.69.72.in-addr.arpa.zone";
+};
+
+zone "13.13.10.in-addr.arpa" IN {
+   type master;
+   file "13.13.10.in-addr.arpa.zone";
+};
+
+zone "31.31.10.in-addr.arpa" IN {
+   type master;
+   file "31.31.10.in-addr.arpa.zone";
+};
+
+zone "97.44.81.in-addr.arpa" IN {
+   type master;
+   file "97.44.81.in-addr.arpa.zone";
+};
+
+zone "239.44.83.in-addr.arpa" IN {
+   type master;
+   file "239.44.83.in-addr.arpa.zone";
+};
+
+zone "1.168.192.in-addr.arpa" IN {
+   type master;
+   file "1.168.192.in-addr.arpa.zone";
+};
+
+zone "251.186.137.in-addr.arpa" IN {
+   type master;
+   file "251.186.137.in-addr.arpa.zone";
+};
 
