Disabled dhcpd in movistar.conf; pointed...
...movistar.conf to pi's eth0.

--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -20,10 +20,11 @@ subnet 10.13.13.0 netmask 255.255.255.0 {
    next-server 10.13.13.25;
 }
 
+# eth0
 subnet 192.168.1.0 netmask 255.255.255.0 {
    range 192.168.1.100 192.168.1.199;
    option broadcast-address 192.168.1.255;
-   option routers 192.168.1.25;
+   option routers 192.168.1.1;
    option domain-name-servers 192.168.1.25;
    filename "pxelinux.0";
    next-server 192.168.1.25;
@@ -232,9 +233,15 @@ host defy {
 }
 
 # shitty jme nic
+#host ocho {
+#   fixed-address ocho;
+#   hardware ethernet 00:90:f5:b5:99:30;
+#}
+
+# ugreen usb ethernet
 host ocho {
    fixed-address ocho;
-   hardware ethernet 00:90:f5:b5:99:30;
+   hardware ethernet 00:0e:c6:c2:16:38;
 }
 
 # netgear usb ethernet
@@ -388,5 +395,10 @@ host vcentos {
 host vf23 {
    fixed-address vf23;
    hardware ethernet 08:00:27:43:5b:23;
+}
+
+host LGwebOSTV {
+   fixed-address LGwebOSTV;
+   hardware ethernet 08:00:27:43:5b:93;
 }
 
