--- a/movistar.conf
+++ b/movistar.conf
@@ -888,7 +888,6 @@
         <MaxGroups>50</MaxGroups>
       </X_TELEFONICA-ES_IGMPSnoop>
       <LANHostConfigManagement>
-        <DHCPServerEnable>TRUE</DHCPServerEnable>
         <MinAddress>192.168.1.8</MinAddress>
         <MaxAddress>192.168.1.199</MaxAddress>
         <DNSServers>80.58.61.250,80.58.61.254</DNSServers>
@@ -910,7 +909,7 @@
         </DHCPStaticAddress>
         <DHCPStaticAddress instance="3">
           <Enable>TRUE</Enable>
-          <Chaddr>7c:dd:90:50:58:9c</Chaddr>
+          <Chaddr>b8:27:eb:66:80:5f</Chaddr>
           <Yiaddr>192.168.1.25</Yiaddr>
         </DHCPStaticAddress>
         <DHCPStaticAddress nextInstance="4" ></DHCPStaticAddress>
@@ -965,7 +964,8 @@
       </LANEthernetInterfaceConfig>
       <LANEthernetInterfaceConfig instance="2">
         <Enable>TRUE</Enable>
-        <DuplexMode>Half</DuplexMode>
+        <MaxBitRate>100</MaxBitRate>
+        <DuplexMode>Full</DuplexMode>
         <X_BROADCOM_COM_IfName>eth1</X_BROADCOM_COM_IfName>
         <Name></Name>
       </LANEthernetInterfaceConfig>
@@ -1086,12 +1086,12 @@
           <AckPolicy>TRUE</AckPolicy>
         </STAWMMParameter>
         <STAWMMParameter nextInstance="5" ></STAWMMParameter>
-        <AssociatedDevice instance="38">
+        <AssociatedDevice instance="74">
           <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
           <X_BROADCOM_COM_Ssid>MOVISTAR_1138</X_BROADCOM_COM_Ssid>
           <X_BROADCOM_COM_Ifcname>wl0</X_BROADCOM_COM_Ifcname>
         </AssociatedDevice>
-        <AssociatedDevice nextInstance="39" ></AssociatedDevice>
+        <AssociatedDevice nextInstance="75" ></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -1605,7 +1605,7 @@
           <X_BROADCOM_COM_VlanMuxID>6</X_BROADCOM_COM_VlanMuxID>
           <ExternalIPAddress notification="2">81.44.97.25</ExternalIPAddress>
           <DNSServers>80.58.61.250,80.58.61.254</DNSServers>
-          <PortMappingNumberOfEntries>1</PortMappingNumberOfEntries>
+          <PortMappingNumberOfEntries>3</PortMappingNumberOfEntries>
           <X_TELEFONICA-ES_IPv6Enabled>TRUE</X_TELEFONICA-ES_IPv6Enabled>
           <X_BROADCOM_COM_Flags>3</X_BROADCOM_COM_Flags>
           <PortMapping instance="1">
@@ -1618,7 +1618,27 @@
             <InternalClient>192.168.1.25</InternalClient>
             <PortMappingDescription>Secure&#32;Shell&#32;Server&#32;(SSH)</PortMappingDescription>
           </PortMapping>
-          <PortMapping nextInstance="2" ></PortMapping>
+          <PortMapping instance="4">
+            <PortMappingEnabled>TRUE</PortMappingEnabled>
+            <ExternalPort>53</ExternalPort>
+            <ExternalPortEndRange>53</ExternalPortEndRange>
+            <InternalPort>53</InternalPort>
+            <X_BROADCOM_COM_InternalPortEnd>53</X_BROADCOM_COM_InternalPortEnd>
+            <PortMappingProtocol>TCP&#32;or&#32;UDP</PortMappingProtocol>
+            <InternalClient>192.168.1.25</InternalClient>
+            <PortMappingDescription>Domain&#32;Name&#32;Server&#32;(DNS)</PortMappingDescription>
+          </PortMapping>
+          <PortMapping instance="5">
+            <PortMappingEnabled>TRUE</PortMappingEnabled>
+            <ExternalPort>953</ExternalPort>
+            <ExternalPortEndRange>953</ExternalPortEndRange>
+            <InternalPort>953</InternalPort>
+            <X_BROADCOM_COM_InternalPortEnd>953</X_BROADCOM_COM_InternalPortEnd>
+            <PortMappingProtocol>TCP&#32;or&#32;UDP</PortMappingProtocol>
+            <InternalClient>192.168.1.25</InternalClient>
+            <PortMappingDescription>DNS&#32;953</PortMappingDescription>
+          </PortMapping>
+          <PortMapping nextInstance="6" ></PortMapping>
         </WANPPPConnection>
         <WANPPPConnection nextInstance="2" ></WANPPPConnection>
       </WANConnectionDevice>
