Lit up dovecot; made pi the DMZ host in movistar.conf.

--- a/movistar.conf
+++ b/movistar.conf
@@ -1086,12 +1086,12 @@
           <AckPolicy>TRUE</AckPolicy>
         </STAWMMParameter>
         <STAWMMParameter nextInstance="5" ></STAWMMParameter>
-        <AssociatedDevice instance="74">
+        <AssociatedDevice instance="76">
           <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
           <X_BROADCOM_COM_Ssid>MOVISTAR_1138</X_BROADCOM_COM_Ssid>
           <X_BROADCOM_COM_Ifcname>wl0</X_BROADCOM_COM_Ifcname>
         </AssociatedDevice>
-        <AssociatedDevice nextInstance="75" ></AssociatedDevice>
+        <AssociatedDevice nextInstance="77" ></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -1339,12 +1339,12 @@
           <TXOP>188</TXOP>
         </STAWMMParameter>
         <STAWMMParameter nextInstance="5" ></STAWMMParameter>
-        <AssociatedDevice instance="18">
+        <AssociatedDevice instance="21">
           <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
           <X_BROADCOM_COM_Ssid>MOVISTAR_PLUS_1138</X_BROADCOM_COM_Ssid>
           <X_BROADCOM_COM_Ifcname>wl1</X_BROADCOM_COM_Ifcname>
         </AssociatedDevice>
-        <AssociatedDevice nextInstance="19" ></AssociatedDevice>
+        <AssociatedDevice nextInstance="22" ></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -1509,7 +1509,7 @@
       </WLANConfiguration>
       <WLANConfiguration nextInstance="3" ></WLANConfiguration>
       <Hosts>
-        <Host nextInstance="8" ></Host>
+        <Host nextInstance="9" ></Host>
       </Hosts>
     </LANDevice>
     <LANDevice nextInstance="2" ></LANDevice>
@@ -1605,40 +1605,10 @@
           <X_BROADCOM_COM_VlanMuxID>6</X_BROADCOM_COM_VlanMuxID>
           <ExternalIPAddress notification="2">81.44.97.25</ExternalIPAddress>
           <DNSServers>80.58.61.250,80.58.61.254</DNSServers>
-          <PortMappingNumberOfEntries>3</PortMappingNumberOfEntries>
+          <PortMappingNumberOfEntries>0</PortMappingNumberOfEntries>
           <X_TELEFONICA-ES_IPv6Enabled>TRUE</X_TELEFONICA-ES_IPv6Enabled>
           <X_BROADCOM_COM_Flags>3</X_BROADCOM_COM_Flags>
-          <PortMapping instance="1">
-            <PortMappingEnabled>TRUE</PortMappingEnabled>
-            <ExternalPort>22</ExternalPort>
-            <ExternalPortEndRange>22</ExternalPortEndRange>
-            <InternalPort>22</InternalPort>
-            <X_BROADCOM_COM_InternalPortEnd>22</X_BROADCOM_COM_InternalPortEnd>
-            <PortMappingProtocol>TCP</PortMappingProtocol>
-            <InternalClient>192.168.1.25</InternalClient>
-            <PortMappingDescription>Secure&#32;Shell&#32;Server&#32;(SSH)</PortMappingDescription>
-          </PortMapping>
-          <PortMapping instance="4">
-            <PortMappingEnabled>TRUE</PortMappingEnabled>
-            <ExternalPort>53</ExternalPort>
-            <ExternalPortEndRange>53</ExternalPortEndRange>
-            <InternalPort>53</InternalPort>
-            <X_BROADCOM_COM_InternalPortEnd>53</X_BROADCOM_COM_InternalPortEnd>
-            <PortMappingProtocol>TCP&#32;or&#32;UDP</PortMappingProtocol>
-            <InternalClient>192.168.1.25</InternalClient>
-            <PortMappingDescription>Domain&#32;Name&#32;Server&#32;(DNS)</PortMappingDescription>
-          </PortMapping>
-          <PortMapping instance="5">
-            <PortMappingEnabled>TRUE</PortMappingEnabled>
-            <ExternalPort>953</ExternalPort>
-            <ExternalPortEndRange>953</ExternalPortEndRange>
-            <InternalPort>953</InternalPort>
-            <X_BROADCOM_COM_InternalPortEnd>953</X_BROADCOM_COM_InternalPortEnd>
-            <PortMappingProtocol>TCP&#32;or&#32;UDP</PortMappingProtocol>
-            <InternalClient>192.168.1.25</InternalClient>
-            <PortMappingDescription>DNS&#32;953</PortMappingDescription>
-          </PortMapping>
-          <PortMapping nextInstance="6" ></PortMapping>
+          <PortMapping nextInstance="7" ></PortMapping>
         </WANPPPConnection>
         <WANPPPConnection nextInstance="2" ></WANPPPConnection>
       </WANConnectionDevice>
@@ -1964,6 +1934,9 @@
       </VoiceService>
       <VoiceService nextInstance="2" ></VoiceService>
     </Services>
+    <X_BROADCOM_COM_SecDmzHostCfg>
+      <IPAddress>192.168.1.25</IPAddress>
+    </X_BROADCOM_COM_SecDmzHostCfg>
     <X_BROADCOM_COM_CertificateCfg instance="1">
       <Name>acscert</Name>
       <Subject>O=Grupo&#32;Telefonica/O=TME/ST=A78923125/L=PZ.&#32;DE&#32;LA&#32;INDEPENDENCIA&#32;6&#32;28001&#32;MADRID/CN=CA&#32;Telefonica&#32;Moviles&#32;Espana&#32;SA&#10;</Subject>
