--- a/resolv.conf
+++ b/resolv.conf
@@ -1,4 +1,4 @@
-; written by /root/src/bash/fifalobath/fifalobath using /etc/sysconfig/network at Sat Mar 26 10:09:06 CET 2016
+; written by /root/src/bash/fifalobath/fifalobath using /etc/sysconfig/network
 search avaritia.com ; from RESOLV_SEARCH
 ; from RESOLV_DNS
 nameserver 127.0.0.1
