--- a/dovecot/conf.d/10-mail.conf
+++ b/dovecot/conf.d/10-mail.conf
@@ -28,6 +28,8 @@
 # <doc/wiki/MailLocation.txt>
 #
 #mail_location = 
+# dmjp
+mail_location = mbox:~/mail:INBOX=/var/mail/%u
 
 # If you need to set multiple mailbox locations or want to change default
 # namespace settings, you can do it by defining namespace sections.
