--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -25,7 +25,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
    range 192.168.1.100 192.168.1.199;
    option broadcast-address 192.168.1.255;
    option routers 192.168.1.1;
-   option domain-name-servers 192.168.1.25;
+   option domain-name-servers 192.168.1.25, 8.8.8.8;
    filename "pxelinux.0";
    next-server 192.168.1.25;
 }
