--- a/polipo/config
+++ b/polipo/config
@@ -22,29 +22,36 @@ logFile = /var/log/polipo/polipo.log
 # proxyAddress = "::0"        # both IPv4 and IPv6
 # proxyAddress = "0.0.0.0"    # IPv4 only
 
+# dmjp proxyAddress = "127.0.0.1"
+proxyAddress = "0.0.0.0"
+proxyPort = 3129
+
 # If you do that, you'll want to restrict the set of hosts allowed to
 # connect:
 
 # allowedClients = "127.0.0.1, 134.157.168.57"
 # allowedClients = "127.0.0.1, 134.157.168.0/24"
 
+# dmjp allowedClients = 127.0.0.1
+allowedClients = "0.0.0.0/0"
+allowedPorts = 1-65535
+
 # Uncomment this if you want your Polipo to identify itself by
 # something else than the host name:
 
-# proxyName = "polipo.example.org"
+proxyName = "localhost"
 
 # Uncomment this if there's only one user using this instance of Polipo:
 
-# cacheIsShared = false
+cacheIsShared = false
 
 # Uncomment this if you want to use a parent proxy:
 
 # parentProxy = "squid.example.org:3128"
 
 # Uncomment this if you want to use a parent SOCKS proxy:
-
-# socksParentProxy = "localhost:9050"
-# socksProxyType = socks5
+#socksParentProxy = "localhost:9050"
+#socksProxyType = socks5
 
 
 ### Memory
@@ -61,13 +68,14 @@ logFile = /var/log/polipo/polipo.log
 # chunkHighMark = 50331648
 # objectHighMark = 16384
 
+chunkHighMark = 33554432
 
 ### On-disk data
 ### ************
 
 # Uncomment this if you want to disable the on-disk cache:
 
-# diskCacheRoot = ""
+diskCacheRoot = ""
 
 # Uncomment this if you want to put the on-disk cache in a
 # non-standard location:
@@ -76,7 +84,7 @@ logFile = /var/log/polipo/polipo.log
 
 # Uncomment this if you want to disable the local web server:
 
-# localDocumentRoot = ""
+localDocumentRoot = ""
 
 # Uncomment this if you want to enable the pages under /polipo/index?
 # and /polipo/servers?.  This is a serious privacy leak if your proxy
@@ -85,25 +93,27 @@ logFile = /var/log/polipo/polipo.log
 # disableIndexing = false
 # disableServersList = false
 
+disableLocalInterface = true
+disableConfiguration = true
 
 ### Domain Name System
 ### ******************
 
 # Uncomment this if you want to contact IPv4 hosts only (and make DNS
 # queries somewhat faster):
-
+#
 # dnsQueryIPv6 = no
 
 # Uncomment this if you want Polipo to prefer IPv4 to IPv6 for
 # double-stack hosts:
-
+#
 # dnsQueryIPv6 = reluctantly
 
 # Uncomment this to disable Polipo's DNS resolver and use the system's
 # default resolver instead.  If you do that, Polipo will freeze during
 # every DNS query:
 
-# dnsUseGethostbyname = yes
+dnsUseGethostbyname = yes
 
 
 ### HTTP
@@ -113,13 +123,16 @@ logFile = /var/log/polipo/polipo.log
 # This will cause your hostname (or whatever you put into proxyName
 # above) to be included in every request:
 
-# disableVia=false
+disableVia = true
 
 # Uncomment this if you want to slightly reduce the amount of
 # information that you leak about yourself:
 
 # censoredHeaders = from, accept-language
 # censorReferer = maybe
+
+censoredHeaders = from,accept-language,x-pad,link
+censorReferer = maybe
 
 # Uncomment this if you're paranoid.  This will break a lot of sites,
 # though:
@@ -155,3 +168,10 @@ logFile = /var/log/polipo/polipo.log
 # Vary header (this is not a good idea):
 
 # mindlesslyCacheVary = true
+
+# Suggestions from Incognito configuration
+maxConnectionAge = 5m
+maxConnectionRequests = 120
+serverMaxSlots = 8
+serverSlots = 2
+tunnelAllowedPorts = 1-65535
